# edd-exchange

./: README.md
exchanger/: pyproject.toml
exchanger/exchanger/: exchanger.py  settings.py
identity/: README.md
shared/: README.md  pyproject.toml
shared/shared/: exceptions.py
shared/shared/crypto/: __init__.py  aban.py  abc.py  mapper.py  tether.py
shared/shared/database/: README.md
shared/shared/database/redis/: abc.py  impl.py  mock.py
shared/shared/entities/: exceptions.py  money.py  order.py
shared/shared/event/: component.py  topics.py
shared/shared/integration/: __init__.py  binance.py  mapper.py  proto.py
shared/shared/log/: README.md
shared/tests/: test_money.py
webapp/: justfile  pyproject.toml
webapp/webapp/: app.py
