[tool.poetry]
name = "exchanger"
version = "0.1.0"
description = ""
authors = ["ManiMozaffar <mani.mozaffar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shared = { path = "../shared/", develop = true }
pydantic-settings = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
