[tool.poetry]
name = "shared"
version = "0.1.0"
description = ""
authors = ["ManiMozaffar <mani.mozaffar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^4.6.0"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
