[tool.poetry]
name = "webapp"
version = "0.1.0"
description = ""
authors = ["ManiMozaffar <mani.mozaffar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.0"
shared = { path = "../shared/", develop = true }
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
